--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -27,4 +27,4 @@
 - if policy(:category).new?
   .row
     .column.small-12
-      = link_to 'New Category', new_category_path
+      = link_to 'New Category', new_category_path, class: 'button'
