--- a/app/views/workshifts/show.html.haml
+++ b/app/views/workshifts/show.html.haml
@@ -5,6 +5,8 @@
 - if policy(:workshift).edit?
   .row
     .column.small-12
-      = link_to 'Edit', edit_workshift_path(@workshift)
-      \|
-      = link_to 'Back', workshifts_path
+      = link_to 'Back', workshifts_path, class: 'button info'
+      - if policy(:workshift).edit?
+        = link_to 'Edit', edit_workshift_path(@workshift), class: 'button'
+      - if policy(:workshift).destroy?
+        = link_to 'Delete', @workshift, method: :delete, data: { confirm: 'Are you sure you want to delete this workshift?' }, class: 'button alert'
