--- a/app/views/workshift_assignments/marketplace_index.html.haml
+++ b/app/views/workshift_assignments/marketplace_index.html.haml
@@ -4,7 +4,8 @@
 
 .row
   .column.small-12
-    %table#workshifts
+    %h3 Shifts you're selling
+    %table#workshifts_put_on_sale
       %thead
         %tr
           %th Task
@@ -16,7 +17,7 @@
           %th 
 
       %tbody
-        - @assignments_on_sale.each do |assignment|
+        - @users_shifts.each do |assignment|
           %tr
             %td= link_to assignment.task, assignment.workshift
             %td= assignment.hours
@@ -24,11 +25,33 @@
             %td= assignment.date
             %td= assignment.formatted_start_time
             %td= assignment.formatted_end_time
-            - if current_user != assignment.workshifter
-              %td
-                = form_tag assignment_sell_to_path(assignment, current_user) do
-                  = submit_tag "Buy Shift", data: { confirm: 'Are you sure you want to buy this shift?' }
-            - if  assignment.workshifter = current_user
-              %td
-                = form_tag assignment_undo_sell_path(assignment) do
-                  = submit_tag "Undo Sell", data: { confirm: 'Are you sure you want to undo the sale of your shift?' }
+            %td
+              = form_tag assignment_undo_sell_path(assignment) do
+                = submit_tag "Undo Sell", data: { confirm: 'Are you sure you want to undo the sale of your shift?' }
+
+.row
+  .column.small-12
+    %h3 Buyable Shifts
+    %table#buyable_workshifts
+      %thead
+        %tr
+          %th Task
+          %th Hours
+          %th Day
+          %th Date
+          %th Start Time
+          %th End Time
+          %th 
+
+      %tbody
+        - @buyable_shifts.each do |assignment|
+          %tr
+            %td= link_to assignment.task, assignment.workshift
+            %td= assignment.hours
+            %td= assignment.weekday
+            %td= assignment.date
+            %td= assignment.formatted_start_time
+            %td= assignment.formatted_end_time
+            %td
+              = form_tag assignment_sell_to_path(assignment, current_user) do
+                = submit_tag "Buy Shift", data: { confirm: 'Are you sure you want to buy this shift?' }
