--- a/app/views/workshifts/_show.html.haml
+++ b/app/views/workshifts/_show.html.haml
@@ -11,7 +11,7 @@
           %td= @workshift.hours
         %tr
           %td Assigned Workshifter:
-          %td= (@workshift.user) ? @workshift.user : "None"
+          %td= (@workshift.user) ? link_to(@workshift.user.name, user_profile_path(@workshift.user)) : "None"
           %td Day:
           %td= @workshift.weekday
         %tr
