--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,16 @@
 @import 'components/*';
 @import 'resources/*';
 @import 'foundation_and_overrides';
+
+table#house_roster td.down_hours {
+    background: #FF4747;
+}
+table#house_roster td.up_hours {
+    background: #4AFF6B;
+}
+table#user_info td.down_hours {
+    background: #FF4747;
+}
+table#user_info td.up_hours {
+    background: #4AFF6B;
+}
