--- a/app/views/users/_workshift_assignments.html.haml
+++ b/app/views/users/_workshift_assignments.html.haml
@@ -5,29 +5,26 @@
         %tr
           %th Day
           %th Task
+          %th Hours
           %th Start Time
           %th End Time
           %th Status
-          %th
-          %th
           %th
           %th
       %tbody
         - workshift_assignments.each do |workshift_assignment|
           %tr{id: "assignment_#{workshift_assignment.id}"}
             %td= workshift_assignment.weekday
-            %td= workshift_assignment.task
+            %td= link_to(workshift_assignment.task, workshift_assignment.workshift)
+            %td= workshift_assignment.hours
             %td= workshift_assignment.formatted_start_time
             %td= workshift_assignment.formatted_end_time
             %td= workshift_assignment.status
-            %td= link_to 'Show', workshift_assignment.workshift
-            - if policy(:workshift).edit?
-              %td= link_to 'Edit', edit_workshift_path(workshift_assignment.workshift)
             %td
               = form_tag assignment_check_off_path(workshift_assignment) do
                 = label_tag :verifier, "Verifier"
                 = collection_select :verifier, nil, User.all, :id, :name, include_blank: true
-                = submit_tag "Check Off"
+                = submit_tag "Check Off", class: 'button success small radius'
             %td
               = form_tag put_on_market_path(workshift_assignment) do
-                = submit_tag "Sell"
+                = submit_tag "Sell", class: 'button alert small radius', data: { confirm: 'Are you sure you want to sell your shift?' }
