--- a/app/views/users/_time_preferences.html.haml
+++ b/app/views/users/_time_preferences.html.haml
@@ -11,15 +11,15 @@
           %thead
             %tr
               %th
-              - if current_user.schedule == {} then current_user.schedule = User.create_schedule end
               - User.available_days.each do |day|
-                %th{:width => "150"}=day
+                %th{ width: '150' }= day
           %tbody
             - User.available_hours.each do |slot|
               %tr
                 %td= slot
-                - current_user.schedule.each do |day, hours|
+                - schedule.each do |day, hours|
                   %td
-                    = check_box_tag "schedule[#{day}][#{slot}]",  "yes", !!(current_user.schedule[day][slot])
+                    = check_box_tag "schedule[#{day}][#{slot}]", 'yes',
+                      !!(schedule[day][slot])
         .column.small-12
           = submit_tag 'Update Schedule', class: 'button small'
