--- a/app/views/users/preferences.html.haml
+++ b/app/views/users/preferences.html.haml
@@ -4,4 +4,4 @@
   .column.small-12
     = render 'users/category_preferences', categories: @categories
   .column.small-12
-    = render 'users/time_preferences'
+    = render 'users/time_preferences', schedule: @schedule
