--- a/app/views/workshifts/_form.html.haml
+++ b/app/views/workshifts/_form.html.haml
@@ -6,7 +6,7 @@
     .column.small-10.large-8
       = f.input :task, placeholder: 'Purpose of workshift'
     .column.small-5.medium-4.large-2
-      = f.input :user, collection: User.all, include_blank: true
+      = f.input :user, collection: User.all, label_method: :name, value_method: :id, include_blank: true, selected: @workshift.user_id
     .column.small-5.medium-4.large-2
       = f.input :hours, default: 1
     .column.small-12.medium-4.large-3
