--- a/app/views/workshifts/_form.html.haml
+++ b/app/views/workshifts/_form.html.haml
@@ -8,7 +8,7 @@
     .column.small-5.medium-4.large-2
       = f.input :user, collection: User.all, label_method: :name, value_method: :id, include_blank: true, selected: @workshift.user_id
     .column.small-5.medium-4.large-2
-      = f.input :hours, default: 1
+      = f.input :hours, default:1.0, step:0.5
     .column.small-12.medium-4.large-3
       = f.input :start_time, ampm: true, minute_step: 15,
         input_html: { class: 'column small-4 medium-5 left' }
