implemented insights, fixed time schedule bug, fixed delete workshift / unassigning worker bug

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,3 +26,7 @@ table#user_info td.down_hours {
 table#user_info td.up_hours {
     background: #4AFF6B;
 }
+
+fieldset#insights span.alert {
+    color: red;
+}
