--- a/app/views/users/profile.html.haml
+++ b/app/views/users/profile.html.haml
@@ -35,9 +35,10 @@
         %legend Required Weekly Hours
         %p= "Current Required Hours: #{@user.required_hours}"
         = form_tag update_required_hours_path(@user)
-        = label_tag :required_hours, "New Required Hours"
-        = number_field_tag :required_hours, @user.required_hours, step: 0.5
-        = submit_tag "Change Required Hours", class: 'button'
+        .column.small-5
+          = label_tag :required_hours, "New Required Hours"
+          = number_field_tag :required_hours, @user.required_hours, step: 0.5
+        = submit_tag "Change Required Hours", class: 'button small'
 
   %h3.column.small Current Workshift Assignments
   .column.small-12
