--- a/app/views/workshifts/_form.html.haml
+++ b/app/views/workshifts/_form.html.haml
@@ -5,8 +5,8 @@
 
     .column.small-10.large-8
       = f.input :task, placeholder: 'Purpose of workshift'
-    .column.small-5.medium-4.large-2
-      = f.input :user, collection: User.all, label_method: :name, value_method: :id, include_blank: true, selected: @workshift.user_id
+    / .column.small-5.medium-4.large-2
+    /   = f.input :user, collection: User.all, label_method: :name, value_method: :id, include_blank: true, selected: @workshift.user_id
     .column.small-5.medium-4.large-2
       = f.input :hours, default:1.0, step:0.5
     .column.small-12.medium-4.large-3
