--- a/app/views/users/_workshift_assignments.html.haml
+++ b/app/views/users/_workshift_assignments.html.haml
@@ -9,8 +9,9 @@
           %th Start Time
           %th End Time
           %th Status
-          %th
-          %th
+          - if current_user == @user
+            %th
+            %th
       %tbody
         - workshift_assignments.each do |workshift_assignment|
           %tr{id: "assignment_#{workshift_assignment.id}"}
@@ -20,11 +21,12 @@
             %td= workshift_assignment.formatted_start_time
             %td= workshift_assignment.formatted_end_time
             %td= workshift_assignment.status
-            %td
-              = form_tag assignment_check_off_path(workshift_assignment) do
-                = label_tag :verifier, "Verifier"
-                = collection_select :verifier, nil, User.all, :id, :name, include_blank: true
-                = submit_tag "Check Off", class: 'button success small radius'
-            %td
-              = form_tag put_on_market_path(workshift_assignment) do
-                = submit_tag "Sell", class: 'button alert small radius', data: { confirm: 'Are you sure you want to sell your shift?' }
+            - if current_user == @user
+              %td
+                = form_tag assignment_check_off_path(workshift_assignment) do
+                  = label_tag :verifier, "Verifier"
+                  = collection_select :verifier, nil, User.all, :id, :name, include_blank: true
+                  = submit_tag "Check Off", class: 'button success small radius'
+              %td
+                = form_tag put_on_market_path(workshift_assignment) do
+                  = submit_tag "Sell", class: 'button alert small radius', data: { confirm: 'Are you sure you want to sell your shift?' }
