--- a/app/views/workshifts/_assignment.html.haml
+++ b/app/views/workshifts/_assignment.html.haml
@@ -4,9 +4,13 @@
       %fieldset
         %legend Workshifter Assignment
         .column.small-12.medium-4.large-6
-          = f.input :user, collection: User.all, label_method: :name, value_method: :id, include_blank: true, selected: @workshift.user_id, disabled: true, label: 'Current Workshifter:'
+          = f.input :user, collection: User.all, label_method: :name,
+            value_method: :id, include_blank: true,
+            selected: @workshift.user_id, disabled: true,
+            label: 'Current Workshifter:'
         .column.small-5.medium-4.large-6
-          = f.input :user, collection: User.all, label_method: :name, value_method: :id, include_blank: true, label: 'New Workshifter:'
+          = f.input :user, collection: User.all, label_method: :name,
+            value_method: :id, include_blank: true, label: 'New Workshifter:'
         .column.small-12
           = f.button :submit, 'Assign New Workshifter', class: 'button small'
     .settings-section.column.small-12.medium-12
