--- a/app/views/users/view_report.html.haml
+++ b/app/views/users/view_report.html.haml
@@ -2,7 +2,7 @@
   .column.small-12
     %h3 Weekly Hours Report for #{@report.period}
   .column.small-12
-    %table
+    %table.data-table
       %thead
         %tr
           %th Resident
