--- a/app/views/workshifts/index.html.haml
+++ b/app/views/workshifts/index.html.haml
@@ -4,7 +4,7 @@
 
 .row
   .column.small-12
-    %table#workshifts
+    %table#workshifts.data-table.hover
       %thead
         %tr
           %th Task
