--- a/app/views/workshift_assignments/marketplace_index.html.haml
+++ b/app/views/workshift_assignments/marketplace_index.html.haml
@@ -3,8 +3,8 @@
     %h1 Workshift Marketplace
     :markdown
       Residents can buy and sell shifts here. Sell shifts that you are unable to
-      complete and you will only lose 1x the amount of hours the shift is worth, 
-      versus losing 2x the amount of hours if you blow the shift. You will not be 
+      complete and you will only lose 1x the amount of hours the shift is worth,
+      versus losing 2x the amount of hours if you blow the shift. You will not be
       penalized if no one buys the shift **as long as** you sell the shift **at least
       24 hours before** it is begins. Buying shifts and completing them will increase your
       hours balance by 1x the amount of hours the shift is worth. **IMPORTANT:** Once
@@ -22,7 +22,7 @@
           %th Date
           %th Start Time
           %th End Time
-          %th 
+          %th
 
       %tbody
         - @users_shifts.each do |assignment|
@@ -34,8 +34,9 @@
             %td= assignment.formatted_start_time
             %td= assignment.formatted_end_time
             %td
-              = form_tag assignment_undo_sell_path(assignment) do
-                = submit_tag "Undo Sell", class: 'button small radius', data: { confirm: 'Are you sure you want to undo the sale of your shift?' }
+              = link_to 'Undo Sell', assignment_undo_sell_path(assignment),
+                class: 'button small radius', method: :post,
+                data: { confirm: 'Are you sure you want to undo the sale of your shift?' }
 
 .row
   .column.small-12
@@ -49,7 +50,7 @@
           %th Date
           %th Start Time
           %th End Time
-          %th 
+          %th
 
       %tbody
         - @buyable_shifts.each do |assignment|
@@ -61,5 +62,7 @@
             %td= assignment.formatted_start_time
             %td= assignment.formatted_end_time
             %td
-              = form_tag assignment_sell_to_path(assignment, current_user) do
-                = submit_tag "Buy Shift", class: 'button', data: { confirm: 'Are you sure you want to buy this shift?' }
+              = link_to 'Buy Shift',
+                assignment_sell_to_path(assignment, current_user),
+                class: 'button radius small', method: 'post',
+                data: { confirm: 'Are you sure you want to buy this shift?' }
