--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,10 +1,20 @@
-%h2 Forgot your password?
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  .actions
-    = f.submit "Send me reset password instructions"
-= render "devise/shared/links"
+%header.row
+  %h2.column.small-12 Forgot your password?
+
+= simple_form_for(resource, as: resource_name,
+  url: password_path(resource_name), html: { method: :post }) do |f|
+  .row
+
+    .column.small-12
+      = f.error_notification
+
+    .column.small-12
+      Submit your email address and we’ll send you a link to reset your password.
+
+    .column.small-12.medium-6
+      = f.input :email, placeholder: 'E-mail Address'
+    .column.small-12
+      = f.button :submit, class: 'button small', value: 'Submit'
+.row#shared-links
+  .column.small-12
+    = render 'devise/shared/links'
