--- a/app/views/users/_workshift_assignments.html.haml
+++ b/app/views/users/_workshift_assignments.html.haml
@@ -11,7 +11,7 @@
           %th End Time
           %th Status
           - if current_user == @user
-            %th
+            %th Verifier's info
             %th
       %tbody
         - workshift_assignments.each do |workshift_assignment|
@@ -25,8 +25,9 @@
             - if current_user == @user
               %td
                 = form_tag assignment_check_off_path(workshift_assignment) do
-                  = text_field_tag :verifier_name, nil, class: 'verifier-name'
+                  = text_field_tag :verifier_name, nil, class: 'verifier-name', :placeholder => "Verifier's name"
                   = hidden_field_tag :verifier, nil
+                  = password_field_tag :verifier_password, nil, class: 'verifier-password', :placeholder => "Verifier's password"
                   = submit_tag "Check Off", class: 'button success small radius'
               %td
                 = form_tag put_on_market_path(workshift_assignment) do
