--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,11 @@
 
     %meta{ name: 'viewport', content: 'width=device-width, initial-scale=1.0' }
 
-    %title= content_for?(:title) ? yield(:title) : 'BSC Workshift Scheduler'
+    - if user_signed_in?
+      %title= (current_user.unit.nil? ?  'Temporary' : current_user.unit.name) + ' Work Scheduler' + ' Workshift Scheduler'
+    - else
+      %title= content_for?(:title) ? yield(:title) : 'Workshift Scheduler'
+
 
     = stylesheet_link_tag 'application'
     = javascript_include_tag 'modernizr'
