--- a/app/views/workshift_assignments/marketplace_index.html.haml
+++ b/app/views/workshift_assignments/marketplace_index.html.haml
@@ -10,6 +10,11 @@
       hours balance by 1x the amount of hours the shift is worth. **IMPORTANT:** Once
       you buy a shift it becomes **YOUR** responsibility.
 
+    %p
+      Sometimes you may see buyable shift with a <span style="color:#b3995d;">yellow dark color</span>, they are the shift that you should consider buying the most.
+      This shift were put on the market within the required selling shift limit.
+      Please make sure to pay attention to the time of the workshift when buying it.
+
 .row
   .column.small-12
     - if policy(:user).update_workshift_selling_limit?
@@ -67,15 +72,29 @@
 
       %tbody
         - @buyable_shifts.each do |assignment|
-          %tr
-            %td= link_to assignment.task, assignment.workshift
-            %td= assignment.hours
-            %td= assignment.weekday
-            %td= assignment.date
-            %td= assignment.formatted_start_time
-            %td= assignment.formatted_end_time
-            %td
-              = link_to 'Buy Shift',
-                assignment_sell_to_path(assignment, current_user),
-                class: 'button radius small', method: 'post',
-                data: { confirm: 'Are you sure you want to buy this shift?' }
+          - if assignment.status == "on market (late)"
+            %tr.priority{ :style => "background-color:#b3995d;" }
+              %td= link_to assignment.task, assignment.workshift
+              %td= assignment.hours
+              %td= assignment.weekday
+              %td= assignment.date
+              %td= assignment.formatted_start_time
+              %td= assignment.formatted_end_time
+              %td
+                = link_to 'Buy Shift',
+                  assignment_sell_to_path(assignment, current_user),
+                  class: 'button radius small', method: 'post',
+                  data: { confirm: 'Are you sure you want to buy this shift?' }
+          - else
+            %tr
+              %td= link_to assignment.task, assignment.workshift
+              %td= assignment.hours
+              %td= assignment.weekday
+              %td= assignment.date
+              %td= assignment.formatted_start_time
+              %td= assignment.formatted_end_time
+              %td
+                = link_to 'Buy Shift',
+                  assignment_sell_to_path(assignment, current_user),
+                  class: 'button radius small', method: 'post',
+                  data: { confirm: 'Are you sure you want to buy this shift?' }
