--- a/app/views/users/_workshift_assignments.html.haml
+++ b/app/views/users/_workshift_assignments.html.haml
@@ -22,13 +22,14 @@
             %td= workshift_assignment.formatted_start_time
             %td= workshift_assignment.formatted_end_time
             %td= workshift_assignment.status
-            - if current_user == @user
+            - if current_user == @user or disable_sell
               %td
                 = form_tag assignment_check_off_path(workshift_assignment) do
                   = text_field_tag :verifier_name, nil, class: 'verifier-name', :placeholder => "Verifier's name"
                   = hidden_field_tag :verifier, nil
                   = password_field_tag :verifier_password, nil, class: 'verifier-password', :placeholder => "Verifier's password"
                   = submit_tag "Check Off", class: 'button success small radius'
-              %td
-                = form_tag put_on_market_path(workshift_assignment) do
-                  = submit_tag "Sell", class: 'button alert small radius', data: { confirm: 'Are you sure you want to sell your shift?' }
+              - if !disable_sell
+                %td
+                  = form_tag put_on_market_path(workshift_assignment) do
+                    = submit_tag "Sell", class: 'button alert small radius', data: { confirm: 'Are you sure you want to sell your shift?' }
