Issue #66: Adding a new link in the menu plus fixing a crash due to missing arguments

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -13,6 +13,8 @@
         %section.top-bar-section
           %ul.right
             %li
+              = link_to 'Workshift sign-off', signoff_path
+            %li
               = link_to 'My Shifts', root_url
             %li
               = link_to 'Weekly Schedule', workshifts_path
