--- a/app/views/users/profile.html.haml
+++ b/app/views/users/profile.html.haml
@@ -69,7 +69,7 @@
   %h3.column.small Current Workshift Assignments
   .column.small-12
     = render 'users/workshift_assignments',
-      workshift_assignments: @workshift_assignments
+      workshift_assignments: @workshift_assignments, disable_sell: false
 
   %h3.column.small Workshift Log
   .column.small-12
