--- a/app/views/standalone_workshift_signoff/index.haml
+++ b/app/views/standalone_workshift_signoff/index.haml
@@ -17,12 +17,12 @@
                       %option{value: user.id}= user.name
                 = submit_tag 'Load workshift', class: 'button small'
 
-- if @workshifts and !@workshifts.empty?
-  .row
-    .column.small-12
-      %h1 #{@user.name}'s workshift(s)
+- if @workshifts
+  - if !@workshifts.empty?
+    .row
       .column.small-12
-        = render 'users/workshift_assignments',
-          workshift_assignments: @workshifts, disable_sell: true
-- else flash[:alert] = "No workshifts available for this user"
-
+        %h1 #{@user.name}'s workshift(s)
+        .column.small-12
+          = render 'users/workshift_assignments',
+            workshift_assignments: @workshifts, disable_sell: true
+  - else flash[:alert] = "No workshifts available for this user"
