--- a/app/views/users/profile.html.haml
+++ b/app/views/users/profile.html.haml
@@ -26,12 +26,23 @@
               %fieldset
                 %legend Required Weekly Hours
                 %p Current Required Hours: #{@user.required_hours}
-                = form_tag update_required_hours_path(@user)
-                .column.small-5
-                  = label_tag :required_hours, 'New Required Hours'
-                  = number_field_tag :required_hours, @user.required_hours,
-                    step: 0.5
-                = submit_tag 'Change Required Hours', class: 'button small'
+                = form_tag update_required_hours_path(@user) do
+                  .column.small-5
+                    = label_tag :required_hours, 'New Required Hours'
+                    = number_field_tag :required_hours, @user.required_hours,
+                      step: 0.5
+                  = submit_tag 'Change Required Hours', class: 'button small'
+        .column.small-12
+          - if policy(:user).update_unit?
+            .settings-section
+              %fieldset
+                %legend Unit
+                %p Current Unit: #{@user.unit.name}
+                = form_tag update_unit_path(@user) do
+                  .column.small-5
+                    = label_tag :unit, 'New Unit name, must exist'
+                    = text_field_tag :unit
+                  = submit_tag 'Change Unit', class: 'button small'
   .column.small-12.medium-4
     %table#user_category_preferences
       %thead
