fixed manager permissions for mass user creation.

--- a/app/views/devise/invitations/new.html.haml
+++ b/app/views/devise/invitations/new.html.haml
@@ -2,31 +2,27 @@
   .column.small-12
     %h2 Add New Users
   .column.small-12
-    - if policy(:unit).edit?
+    - if current_user.admin?
       :markdown
-        Enter new user information in **Comma Separated** format, with names
-        in the first column, email addresses in the second, and Unit name in the third,
+        Enter new user information in comma-separated format, one user per row, with names in the first column, email addresses in the second, and unit name in the third.
         Unit must exist prior to this operation.
 
         [Example Input](http://pastebin.com/zy95krRC)
-    - else
+    - elsif current_user.workshift_manager? or current_user.unit_level_admin?
       :markdown
-        Enter new user information in **Comma Separated** format, with names
-        in the first column and email addresses in the second.
+        Enter new user information in comma-separated format, one user per row, with names in the first column and email addresses in the second.
 
         [Example Input](http://pastebin.com/Kaedc37g)
 
 .row
   = form_tag invite_users_path do
     .column.small-12
-      - if policy(:unit).edit?
-        = label_tag 'user_info', 'User Names, Emails and Units'
+      - if current_user.admin?
         = text_area_tag 'user_info', @user_info, rows: 20,
-          placeholder: 'User Name,user_email@example.com, Unit Name'
-      - else
-        = label_tag 'user_info', 'User Names and Emails'
+          placeholder: 'User Name, user_email@example.com, Unit Name'
+      - elsif current_user.workshift_manager? or current_user.unit_level_admin?
         = text_area_tag 'user_info', @user_info, rows: 20,
-          placeholder: 'User Name,user_email@example.com'
+          placeholder: 'User Name, user_email@example.com'
 
     .column.small-12
       %input.button{:type => "submit", :value => "Invite User"}/
