--- a/app/views/workshift/index.html.erb
+++ b/app/views/workshift/index.html.erb
@@ -1,3 +1,10 @@
 <h1>Workshifts!</h1>
 
 <iframe src="//giphy.com/embed/Q5wEEjz5qx5rG" width="480" height="294" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/kanye-west-shrug-shrugging-Q5wEEjz5qx5rG">via GIPHY</a></p>
+<!-- Need need to link one policy to each house and display it here
+        Need to use permissions to allow admin to edit policy
+        Maybe not have this be our root page? -->
+<p>Finning Dates:</p>
+<p>Semester:</p>
+<p>Finning Rate:</p>
+<p>Market Sell By:</p>
