Attempt 2.0 (better UI)  at users table and upload CSV

--- a/app/views/users/get_all.erb
+++ b/app/views/users/get_all.erb
@@ -1,6 +1,6 @@
 <h1>All Current Users</h1>
 
-<table id="users-table" data-source="<%= get_all_users_path(format: :json) %>">
+<table id="users-table" class="display" data-source="<%= get_all_users_path(format: :json) %>">
   <thead>
     <tr>
       <th>First Name</th>
