--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,9 @@
  * file per style scope.
  *
  *= require_tree .
+ *= require jquery-ui
+ *= require dataTables/jquery.dataTables
+ *= require dataTables/src/demo_table_jui
  *= require_self
  */
 
