--- a/app/views/users/get_all.erb
+++ b/app/views/users/get_all.erb
@@ -1,6 +1,8 @@
 <h1>All Current Users</h1>
 
-<table id="users-table" class="display" data-source="<%= get_all_users_path(format: :json) %>">
+<div style="width:70%">
+
+<table id="users-table" class="display" data-source="<%= get_all_users_path(format: :json) %>" >
   <thead>
     <tr>
       <th>First Name</th>
@@ -12,4 +14,4 @@
   </tbody>
 </table
 
-<%= javascript_include_tag('get_all_users.js') %>
+</div>
